# OldVideo-HDRemasterer-AI

./: .gitignore  CMakeLists.txt  README.md
docs/: Specification.md
scripts/: download_ffmpeg.ps1  download_models.ps1
src/: gui.cpp  gui.h  interpolator.cpp  interpolator.h  localization.h  main.cpp  rife_warp.cpp  rife_warp.h  stabilizer.cpp  stabilizer.h  upscaler.cpp  upscaler.h  utils.cpp  utils.h  video_processor.cpp  video_processor.h
